# aad-confidential-client-rs

./: .gitignore  Cargo.toml  README.md
src/: confidential_client.rs  lib.rs  singleton_cache.rs
