[package]
name = "aad-confidential-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["default", "derive"] }
serde_json = "1.0"
slog = "2.7"
openssl = "0.10"
jsonwebtoken = "7.2"
uuid = "0.8"
base64 = "0.13"

[dev-dependencies]
tokio = { version = "1.7", features = ["full"] }
slog-term = "2.8"
slog-async = "2.6"
